--- a/Helloworld/app/src/main/res/values/strings.xml
+++ b/Helloworld/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Helloworld</string>
+    <string name="start">START</string>
+    <string name="back">Back</string>
+    <string name="this_is_a_test_app">This is a Test APP</string>
 </resources>
